Fixed overflow issue

--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -31,6 +31,10 @@ html {
     font-family: $font-stack;
 }
 
+body {
+    overflow-y: hidden;
+}
+
 .onscreen {
     background-color: $navy;
 }
